# AirPlay-TV

./: .gitignore  AGENTS.md  EXTERNAL_DOCUMENTATION_INDEX.md  INDEX.md  README.md  REFACTORING_COMPLETE.md  cpp-optimization-plan.md  def_plan.md  kotlin-optimization-plan.md  optimization_results.md
.archive/: ANALISE_NTP.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  SETUP.md
.archive/ai-audits/: code_refactoring_plan.md  optimization_plan.md
.archive/old-specs/: fase1-validacao-hardware.md
.kiro/: ISSUE_TEMPLATE.md  agents.md  memory.md
.kiro/steering/: airplay-project-context.md  product.md  structure.md  tech.md
.specs/: design.md  fase1-biblioteca-airplay.md  memory.md  specs.md  task.md
AirPlayTV/: .gitignore  CHANGELOG.md  COMANDOS_ADB.md  FASE5_RESUMO.md  MainActivity_COM_BOTOES_TESTE.kt  README.md  debug_mdns.sh  install-tv.sh  settings.gradle.kts  validate_fase5.sh
AirPlayTV/app/: build.gradle.kts  proguard-rules.pro
AirPlayTV/app/src/main/: AndroidManifest.xml
AirPlayTV/app/src/main/cpp/: AGENTS.md  CMakeLists.txt  airplay_media_routes.cpp  airplay_server.cpp  airplay_server.h  native-lib.cpp  request_utils.h
AirPlayTV/app/src/main/cpp/core/: AirPlayServer.cpp  AirPlayServer.h  MediaOrchestrator.cpp  MediaOrchestrator.h  SessionManager.cpp  SessionManager.h
AirPlayTV/app/src/main/cpp/jni/: JniBridge.cpp  JniBridge.h  native-lib.cpp
AirPlayTV/app/src/main/cpp/network/: mirror_server.cpp  mirror_server.h  network_utils.cpp  network_utils.h  ntp_client.cpp  ntp_client.h  rtp_receiver.cpp  rtp_receiver.h
AirPlayTV/app/src/main/cpp/protocol/: fairplay_handler.cpp  fairplay_handler.h  protocol_constants.cpp  protocol_constants.h  rtsp_handler.cpp  rtsp_handler.h
AirPlayTV/app/src/main/cpp/protocol/routes/: PhotoRouteHandler.cpp  PhotoRouteHandler.h  RouteDispatcher.cpp  RouteDispatcher.h  RouteHandler.h  ServerInfoHandler.cpp  ServerInfoHandler.h  VideoRouteHandler.cpp  VideoRouteHandler.h
AirPlayTV/app/src/main/cpp/ux_raop_core/android/: dnssd_stub.cpp
AirPlayTV/app/src/main/cpp/ux_raop_core/include/: UxRaopCore.h
AirPlayTV/app/src/main/cpp/ux_raop_core/src/: UxRaopCore.cpp
AirPlayTV/app/src/main/java/com/airplay/tv/: AGENTS.md  MainActivity.kt
AirPlayTV/app/src/main/java/com/airplay/tv/media/: AudioDecoder.kt  AudioInputQueue.kt  AudioPerformanceTracker.kt  AudioTrackManager.kt  DecoderState.kt  H264FrameTools.kt  SyncManager.kt  VideoDecoder.kt  VideoInputQueue.kt  VideoPerformanceTracker.kt
AirPlayTV/app/src/main/java/com/airplay/tv/network/: NetworkUtils.kt  mDNSModule.kt
AirPlayTV/app/src/main/java/com/airplay/tv/protocol/: AirPlayCodecConfigParser.kt  AirPlayJniBridge.kt  AirPlayMirroringSession.kt  AirPlayPairingManager.kt  AudioAccessUnitExtractor.kt  AudioFrameDecryptorSelector.kt  AudioStreamConfig.kt  MediaPlaybackDispatcher.kt  MirroringPacketHandler.kt  MirroringSetupBuilder.kt  MirroringVideoPayloadParser.kt  ProtocolAudioPipeline.kt  ProtocolHandler.kt  ProtocolPlaybackStateStore.kt  RTPParser.kt
AirPlayTV/app/src/main/java/com/airplay/tv/service/: AirPlayService.kt  AudioPipelineConfigurator.kt  MediaPipelineController.kt  SessionManager.kt  TelemetryCollector.kt  VideoDecoderConfigurator.kt  VideoOutputSize.kt
AirPlayTV/app/src/main/java/com/airplay/tv/ui/: AirPlayViewModel.kt  MediaStateTracker.kt  ServiceConnectionManager.kt  TelemetryFlowBinder.kt  UIStateManager.kt  VideoOutputSizeFlowBinder.kt
AirPlayTV/app/src/main/java/com/airplay/tv/ui/components/: ConnectingScreen.kt  ErrorScreen.kt  IdleScreen.kt  MediaPlaybackScreen.kt  MirroringScreen.kt  ScreenChrome.kt  StartupScreen.kt
AirPlayTV/app/src/main/java/com/airplay/tv/ui/components/idle/: IdleHeroColumn.kt  MirrorGuideCard.kt
AirPlayTV/app/src/main/java/com/airplay/tv/ui/theme/: Theme.kt  Type.kt
AirPlayTV/app/src/main/java/com/airplay/tv/util/: Constants.kt  Logger.kt  TelemetryCollector.kt
AirPlayTV/app/src/main/res/drawable/: app_banner.xml  ic_launcher_foreground.xml
AirPlayTV/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
AirPlayTV/app/src/test/java/com/airplay/tv/media/: VideoDecoderTest.kt  VideoPerformanceTrackerTest.kt
AirPlayTV/app/src/test/java/com/airplay/tv/protocol/: AirPlayMirroringSessionTest.kt  AirPlayPairingManagerTest.kt  AudioAccessUnitExtractorTest.kt  AudioFrameDecryptorSelectorTest.kt  AudioStreamConfigTest.kt
AirPlayTV/app/src/test/java/com/airplay/tv/ui/: TelemetryFlowBinderTest.kt  UIStateManagerTest.kt  VideoOutputSizeFlowBinderTest.kt
AirPlayTV/app/src/test/java/com/airplay/tv/ui/components/: MirroringScreenTest.kt
AirPlayTV/scripts/: test-local-handshake.sh  verify_video_pipeline.sh
scripts/: audio_logs.sh  context_audit.sh  dev_audio_loop.sh  download_external_docs.py  emulator_tv.sh  local_audio_gate.sh  status.sh
